--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                                             </li>
 
                                             <li class="heading-list   ">
-                                                <a class="heading-links" href="ht">E-Resources</a>
+                                                <a class="heading-links" href="https://elimupepe.loholearning.co.ke/">E-Resources</a>
                                             </li>
 
                                             <li class="heading-list   ">
@@ -708,7 +708,7 @@
                                             </li>
 
                                             <li class="heading-list   ">
-                                                <a class="heading-links" href="ht">E-Resources</a>
+                                                <a class="heading-links" href="https://elimupepe.loholearning.co.ke/">E-Resources</a>
                                             </li>
 
                                             <li class="heading-list   ">
@@ -8108,16 +8108,16 @@
 </div>
 
 
-<script type="text/javascript" src="https://infixlms.ischooll.com/Modules/AoraPageBuilder/Resources/assets/js/bootstrap.min.js">
+<script type="text/javascript" src="Modules/AoraPageBuilder/Resources/assets/js/bootstrap.min.js">
 </script>
-<script type="text/javascript" src="https://infixlms.ischooll.com/Modules/AoraPageBuilder/Resources/assets/js/jquery-ui.min.js">
+<script type="text/javascript" src="Modules/AoraPageBuilder/Resources/assets/js/jquery-ui.min.js">
 </script>
-<script type="text/javascript" src="https://infixlms.ischooll.com/Modules/AoraPageBuilder/Resources/assets/js/ckeditor.js"></script>
-<script type="text/javascript" src="https://infixlms.ischooll.com/Modules/AoraPageBuilder/Resources/assets/js/form-builder.min.js"></script>
-<script type="text/javascript" src="https://infixlms.ischooll.com/Modules/AoraPageBuilder/Resources/assets/js/form-render.min.js"></script>
-<script type="text/javascript" src="https://infixlms.ischooll.com/Modules/AoraPageBuilder/Resources/assets/js/aoraeditor.js"></script>
+<script type="text/javascript" src="Modules/AoraPageBuilder/Resources/assets/js/ckeditor.js"></script>
+<script type="text/javascript" src="Modules/AoraPageBuilder/Resources/assets/js/form-builder.min.js"></script>
+<script type="text/javascript" src="Modules/AoraPageBuilder/Resources/assets/js/form-render.min.js"></script>
+<script type="text/javascript" src="Modules/AoraPageBuilder/Resources/assets/js/aoraeditor.js"></script>
 
-<script type="text/javascript" src="https://infixlms.ischooll.com/Modules/AoraPageBuilder/Resources/assets/js/aoraeditor-components.js"></script>
+<script type="text/javascript" src="Modules/AoraPageBuilder/Resources/assets/js/aoraeditor-components.js"></script>
 
 
 <script src="public/frontend/infixlmstheme/js/courses.js"></script>
