--- a/index.html
+++ b/index.html
@@ -4753,45 +4753,72 @@
             </div>
         </div>
         <div class="row align-items-center">
+  <!-- Video Section -->
+  <div class="col-lg-6">
+    <div class="about-video position-relative text-center">
+      <img src="public/frontend/infixlmstheme/img/others/about-v3.png" alt="About LoHo Learning" class="img-fluid rounded shadow">
+      <a href="#" class="about-video-play d-flex justify-content-center align-items-center" 
+         onclick="openVideoPopup(event)"
+         style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:80px; height:80px; background:#0dc152; color:#fff; border-radius:50%; font-size:28px;">
+        <i class="fa fa-play"></i>
+      </a>
+    </div>
+  </div>
+<!-- Text Content -->
+  <div class="col-lg-6">
+    <div class="about-content ps-lg-4 mt-4 mt-lg-0">
+      <h3>LoHo Learning – Digital Education for All</h3>
+      <p>LoHo Learning is a Pan-African EdTech company and a spin-off of Longhorn Publishers PLC. We provide affordable, accessible, and inclusive digital learning solutions powered by artificial intelligence. Our ecosystem features interactive eBooks, gamified learning tools, and inclusive options for learners with special needs.</p>
+      <p>Through our flagship product <strong>Elimu Pepe</strong>, developed in partnership with <strong>Safaricom PLC</strong>, we bring affordable, curriculum-aligned learning to every Kenyan learner—combining educational devices with rich academic content and teacher support.</p>
 
-            <div class="col-lg-6">
-                <div class="about-video position-relative">
-                    <img src="public/frontend/infixlmstheme/img/others/about-v3.png" alt="">
-                    <a href="#" class="about-video-play">
-                        <i class="fa fa-play">&nbsp;</i>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="about-content">
-                    <h3>LoHo Learning – Digital Education for All</h3>
-                    <p>LoHo Learning is a Pan-African EdTech company and a spin-off of Longhorn Publishers PLC. We provide affordable, accessible, and inclusive digital learning solutions powered by artificial intelligence. Our ecosystem features interactive eBooks, gamified learning tools, and inclusive options for learners with special needs.</p>
-                    <p>Through our flagship product <strong>Elimu Pepe</strong>, developed in partnership with <strong>Safaricom PLC</strong>, we bring affordable, curriculum-aligned learning to every Kenyan learner—combining educational devices with rich academic content and teacher support.</p>
+      <ul class="mb-4 mb-lg-5 list-unstyled">
+        <li class="d-flex flex-wrap mb-2">
+          <span class="icon text-primary me-2">
+            <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z" fill="#CEE8FF" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path d="M8.20312 14.2002L11.694 17.8002C13.3367 13.0814 14.7048 11.0108 17.8031 8.2002" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg>
+          </span>
+          <span class="content">Access thousands of CBC-aligned learning areas and interactive resources</span>
+        </li>
+        <li class="d-flex flex-wrap">
+          <span class="icon text-primary me-2">
+            <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z" fill="#CEE8FF" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path d="M8.20312 14.2002L11.694 17.8002C13.3367 13.0814 14.7048 11.0108 17.8031 8.2002" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg>
+          </span>
+          <span class="content">Empowering schools, teachers, and students with AI-powered digital learning</span>
+        </li>
+      </ul>
 
-                    <ul class="mb-4 mb-lg-5">
-                        <li class="d-flex flex-wrap">
-                            <span class="icon text-primary">
-                                <svg width="26" height="26" viewbox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z" fill="#CEE8FF" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                    <path d="M8.20312 14.2002L11.694 17.8002C13.3367 13.0814 14.7048 11.0108 17.8031 8.2002" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                </svg>
-                            </span>
-                            <span class="content">Access thousands of CBC-aligned learning areas and interactive resources</span>
-                        </li>
-                        <li class="d-flex flex-wrap">
-                            <span class="icon text-primary">
-                                <svg width="26" height="26" viewbox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z" fill="#CEE8FF" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                    <path d="M8.20312 14.2002L11.694 17.8002C13.3367 13.0814 14.7048 11.0108 17.8031 8.2002" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                </svg>
-                            </span>
-                            <span class="content">Empowering schools, teachers, and students with AI-powered digital learning</span>
-                        </li>
-                    </ul>
-                    <a href="#" class="theme-btn">Know More</a>
-                </div>
-            </div>
-        </div>
+      <a href="#" class="theme-btn">Know More</a>
+    </div>
+  </div>
+</div>
+
+<!-- Video Popup -->
+<div id="videoPopup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:9999;">
+  <div style="position:relative; width:80%; max-width:853px;">
+    <iframe id="videoFrame" width="100%" height="480" src="" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
+    <button onclick="closeVideoPopup()" style="position:absolute; top:-10px; right:-10px; background:#fff; border:none; font-size:24px; cursor:pointer; border-radius:50%; width:36px; height:36px;">×</button>
+  </div>
+</div>
+
+<script>
+function openVideoPopup(e) {
+  e.preventDefault();
+  document.getElementById("videoFrame").src = "https://www.youtube.com/embed/JRivmIZZxTM?autoplay=1";
+  document.getElementById("videoPopup").style.display = "flex";
+}
+function closeVideoPopup() {
+  document.getElementById("videoFrame").src = "";
+  document.getElementById("videoPopup").style.display = "none";
+}
+</script>
+
 
         <div class="row">
             <div class="col-12">
