--- a/index.html
+++ b/index.html
@@ -4,156 +4,94 @@
 <head>
     <!-- Web Application Manifest -->
     <link rel="manifest" href="/manifest.json">
+
     <!-- Chrome for Android theme color -->
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#02adee">
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Infix LMS">
+    <meta name="application-name" content="LoHo Learning">
     <link rel="icon" sizes="512x512" href="public/images/icons/icon-512x512.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Infix LMS">
+    <meta name="apple-mobile-web-app-title" content="LoHo Learning">
     <link rel="apple-touch-icon" href="public/images/icons/icon-512x512.png">
 
+    <!-- iOS Splash Screens -->
+    <link href="public/images/icons/splash-640x1136.png" rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)">
+    <link href="public/images/icons/splash-750x1334.png" rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)">
+    <link href="public/images/icons/splash-1242x2208.png" rel="apple-touch-startup-image" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)">
+    <link href="public/images/icons/splash-1125x2436.png" rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)">
+    <link href="public/images/icons/splash-828x1792.png" rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)">
+    <link href="public/images/icons/splash-1242x2688.png" rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)">
+    <link href="public/images/icons/splash-1536x2048.png" rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)">
+    <link href="public/images/icons/splash-1668x2224.png" rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)">
+    <link href="public/images/icons/splash-1668x2388.png" rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)">
+    <link href="public/images/icons/splash-2048x2732.png" rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)">
 
-    <link href="public/images/icons/splash-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-750x1334.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-1242x2208.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-828x1792.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-1242x2688.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-1536x2048.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-1668x2224.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-1668x2388.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <link href="public/images/icons/splash-2048x2732.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-
-    <!-- Tile for Win8 -->
-    <meta name="msapplication-TileColor" content="#ffffff">
+    <!-- Windows Tile -->
+    <meta name="msapplication-TileColor" content="#02adee">
     <meta name="msapplication-TileImage" content="public/images/icons/icon-512x512.png">
 
-    <script type="text/javascript">
-        // Initialize the service worker
+    <!-- Service Worker -->
+    <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('https://infixlms.ischooll.com/serviceworker.js', {
-                scope: '.'
-            }).then(function(registration) {
-                // Registration was successful
-                console.log('Laravel PWA: ServiceWorker registration successful with scope: ', registration.scope);
-            }, function(err) {
-                // registration failed :(
-                console.log('Laravel PWA: ServiceWorker registration failed: ', err);
-            });
+            navigator.serviceWorker.register('/serviceworker.js', { scope: '.' })
+                .then(reg => console.log('LoHo Learning PWA registered:', reg.scope))
+                .catch(err => console.log('PWA registration failed:', err));
         }
     </script>
+
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="csrf-token" content="RwEpAzz8A5YR13AMFXenAxmKZNPuXBc2FCOJrGoQ" />
 
-    <meta property="og:url" content="https://loholearning.co.ke/index.html" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Infix LMS" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="public/uploads/settings/logo.png" />
+    <!-- Open Graph -->
+    <meta property="og:url" content="https://loholearning.co.ke">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="LoHo Learning">
+    <meta property="og:description" content="Empowering learners through digital innovation and education access.">
+    <meta property="og:image" content="public/uploads/settings/logo.png">
 
-    <meta name="title" content="Loho Learning | Homepage">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <!-- SEO -->
+    <meta name="title" content="LoHo Learning | Empowering Digital Education">
+    <meta name="description" content="LoHo Learning provides online learning resources, digital lessons, and education support tools.">
+    <meta name="keywords" content="LoHo Learning, e-learning, Kenya, education, online classes, ElimuPepe, digital learning">
 
-    <title>Loho Learning</title>
-    <link rel="icon" href="public/uploads/settings/favicon.png" type="image/png" />
+    <!-- Favicon -->
+    <link rel="icon" href="public/uploads/settings/favicon.png" type="image/png">
 
-    <div>
-        <style data-type="aoraeditor-style">
-            :root { --system_primery_gredient1: #02adee; --system_primery_gredient2: #f0585a; --system_primary_gredient1: #02adee; --system_primary_gredient2: #f0585a; --system_primery_color: linear-gradient( 77.16deg, var(--system_primery_gredient1) 13.44%, var(--system_primery_gredient2)
-            50%, var(--system_primery_gredient1) 87.24% ); --system_primary_color: linear-gradient( 77.16deg, var(--system_primary_gredient1) 13.44%, var(--system_primary_gredient2) 50%, var(--system_primary_gredient1) 87.24% ); --system_secendory_color:
-            #202E3B ; --footer_background_color: #1E2147 ; --footer_headline_color: #ffffff ; --footer_text_color: #5B5C6E ; --footer_text_hover_color: #f0585a ; --bg_color: #ffffff ; --menu_bg: #f8f9fa; --menu_text: #2b3d4e ; --menu_hover_text: #f0585a;
-            --menu_title_text: #202E3B ; --system_primery_color_0: #02adee00; --system_primery_color_05: #02adee0d; --system_primery_color_07: #02adee12; --system_primery_color_08: #02adee14; --system_primery_color_10: #02adee1a; --system_primery_color_20:
-            #02adee33; --system_primery_color_30: #02adee4d; --system_primery_color_50: #02adee80; --system_primery_color_60: #02adee99; --system_primery_color_70: #02adeeb3; --system_primary_color_0: #02adee00; --system_primary_color_05: #02adee0d; --system_primary_color_07:
-            #02adee12; --system_primary_color_08: #02adee14; --system_primary_color_10: #02adee1a; --system_primary_color_20: #02adee33; --system_primary_color_30: #02adee4d; --system_primary_color_50: #02adee80; --system_primary_color_60: #02adee99;
-            --system_primary_color_70: #02adeeb3; --system_secendory_color_10: #202E3B1a ; --sytem_gradient_2: #202E3B; --font_family1: "Plus Jakarta Sans", sans-serif; --font_family2: "Inter", sans-serif; --fontFamily1: "Plus Jakarta Sans", sans-serif;
-            --fontFamily2: "Inter", sans-serif; }
-        </style>
-        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>
-            WebFont.load({
-                google: {
-                    families: [
-                        "Source Sans Pro",
-                        "Jost"
-                    ]
-                }
-            });
-        </script>
-    </div>
+    <title>LoHo Learning</title>
 
-    <style data-type="aoraeditor-style">
-        :root { --white: #fff; --icon: #000; --backend-main-bg: #F7F7FA; --backend-primary-color: #02adee; --header-bg: #fff; --sidebar-bg: #2A3042; --sidebar-link: #a6b0cf; --sidebar-link-active: #fff; --dashboard-summery-bg: #fff; --header-search-bg: #F3F3F9;
-        --theme-default-color: #343a40; --notification-count: #fff; --icon-color: #555B6D; --icon-color-active: #212636; --sun-yellow: #c3530f; --white-box-bg: #fff; --sidebar-mini-link-hover: #2e3548; --card-header-bg: rgba(0, 0, 0, 0.03); --uppy-title-color:
-        #000; --uppy-action-btn-color: #415094; --uppy-border: #dfdfdf; --selector-bg: #fff; --selector-shadow: 0px 10px 20px rgb(0 0 0 / 30%); --data-table-info: #415094; --data-table-row-hover: #fff; --pink-color: var(--backend-primary-color); --button-background:
-        #02adee; --button-hover: #029bd4; --pagination-bg: #fff; --pagination-color: ; --disabled-pagination-btn: #fff; --disabled-pagination-color: #000; --shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, .03); --white_box_shadow: 0 0.75rem 1.5rem #12263f08;
-        --popup_box_shadow: 0 1rem 3rem rgba(0, 0, 0, .175); --backend-border-color: #eff2f7; --border-hover-color: #d3dbe9; --nav-tab: #cad5f3; --nav-tab-active: var(--backend-main-bg); --dropdown-bg: var(--white); --notification-palse: rgba(2, 173,
-        238, 0.75); --dynamic-text-color: #495057; --required-red: #f0585a; --table-head: #eff2f7; --scroll-thumb: #a6b0cf; --scroll-thumb-hover: var(--backend-primary-color); --topnav-link: #fff9; --topnav-submenu-link: #545a6d; --footer-bg: #f2f2f5;
-        --muted-text: rgba(33, 37, 41, 0.75); --bs-modal-bg: var(--backend-main-bg); --payment-logo-border-color: #E7EAEE; } .dark { --white: #fff; --icon: #fff; --backend-main-bg: #222736; --backend-primary-color: #02adee; --header-bg: #262b3c; --sidebar-bg:
-        #2A3042; --sidebar-link: #a6b0cf; --sidebar-link-active: #fff; --dashboard-summery-bg: #2A3042; --header-search-bg: #2A3042; --theme-default-color: #f6f6f6; --notification-count: #ffffff; --icon-color: #f6f6f6; --icon-color-active: #fff; --uppy-border-color:
-        #32394e; --white-box-bg: #2A3042; --sidebar-mini-link-hover: #2e3548; --card-header-bg: #2e3548; --uppy-title-color: #fff; --uppy-action-btn-color: #6275cb; --uppy-border: #353d55; --selector-bg: #2A3042; --selector-shadow: 0px 10px 20px rgb(0
-        0 0 / 30%); --data-table-info: #f6f6f6; --data-table-row-hover: #2A3042; --pink-color: var(--backend-primary-color); --button-background: #02adee; --button-hover: #029bd4; --pagination-bg: #2A3042; --pagination-color: #fff; --disabled-pagination-btn:
-        #2A3042; --disabled-pagination-color: #fff; --shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, .03); --white_box_shadow: 0 0.75rem 1.5rem #12263f08; --popup_box_shadow: 0 1rem 3rem rgba(0, 0, 0, .175); --backend-border-color: #32394e; --border-hover-color:
-        #6a7492; --nav-tab: var(--header-bg); --nav-tab-active: var(--backend-main-bg); --dropdown-bg: var(--backend-main-bg); --notification-palse: rgba(255, 255, 255, 0.75); --dynamic-text-color: #a6b0cf; --required-red: #f0585a; --table-head: #32394e;
-        --scroll-thumb: #a6b0cf; --scroll-thumb-hover: var(--backend-primary-color); --topnav-link: #fff9; --topnav-submenu-link: var(--topnav-link); --footer-bg: #262b3c; --muted-text: rgba(255, 255, 255, 0.5); --bs-secondary-color: rgba(255, 255, 255,
-      D 0.5); --bs-modal-bg: var(--backend-main-bg); --payment-logo-border-color: #E7EAEE26; }
-    </style>
+    <!-- Fonts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: { families: ["Plus Jakarta Sans", "Inter", "Jost", "Source Sans Pro"] }
+        });
+    </script>
 
-    <link rel="stylesheet" href="public/backend/css/themify-icons.css" />
-
-
-    <link rel="stylesheet" href="Modules/AoraPageBuilder/Resources/assets/css/fontawesome.css" data-type="aoraeditor-style" />
-
-    <link rel="stylesheet" href="Modules/AoraPageBuilder/Resources/assets/css/aoraeditor.css" data-type="aoraeditor-style" />
-    <link rel="stylesheet" href="Modules/AoraPageBuilder/Resources/assets/css/aoraeditor-components.css" data-type="aoraeditor-style" />
-
-
-    <link rel="stylesheet" type="text/css" data-type="aoraeditor-style" href="https://infixlms.ischooll.com/Modules/AoraPageBuilder/Resources/assets/css/style.css">
-
-
-
-    <link rel="stylesheet" href="Modules/AoraPageBuilder/Resources/assets/css/bootstrap.min.css" data-type="aoraeditor-style" />
-    <link rel="stylesheet" href="public/frontend/infixlmstheme/css/fontawesome.css?v=9.0.0 " data-type="aoraeditor-style">
-
-    <link rel="stylesheet" href="public/frontend/infixlmstheme/css/app.css" data-type="aoraeditor-style">
-
-    <link rel="stylesheet" type="text/css" data-type="aoraeditor-style" href="public/frontend/infixlmstheme/css/frontend_style.css">
-
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="public/backend/css/themify-icons.css">
+    <link rel="stylesheet" href="Modules/AoraPageBuilder/Resources/assets/css/fontawesome.css">
+    <link rel="stylesheet" href="Modules/AoraPageBuilder/Resources/assets/css/aoraeditor.css">
+    <link rel="stylesheet" href="Modules/AoraPageBuilder/Resources/assets/css/aoraeditor-components.css">
+    <link rel="stylesheet" href="Modules/AoraPageBuilder/Resources/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/frontend/infixlmstheme/css/fontawesome.css?v=9.0.0">
+    <link rel="stylesheet" href="public/frontend/infixlmstheme/css/app.css">
+    <link rel="stylesheet" href="public/frontend/infixlmstheme/css/frontend_style.css">
     <link rel="stylesheet" href="public/frontend/infixlmstheme/css/mega_menu.css">
-
-
-
-
-    <link rel="stylesheet" href="public/css/preloader.css" />
+    <link rel="stylesheet" href="public/css/preloader.css">
     <link rel="stylesheet" href="public/frontend/infixlmstheme/css/custom.css">
 
-
-
-    <style>
-    </style>
+    <!-- Scripts -->
     <script src="public/js/common.js"></script>
     <script src="public/frontend/infixlmstheme/js/common.js"></script>
-
-    <script type="text/javascript" src="public/frontend/infixlmstheme/js/jquery.lazy.min.js"></script>
-
-
-    <link rel="stylesheet" href="public/css/preloader.css" />
-
-    <div>
-
-
-    </div>
-
-
+    <script src="public/frontend/infixlmstheme/js/jquery.lazy.min.js"></script>
 </head>
+
 
 <body>
     <div class="preloader" dir="ltr">
