--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <script>
         window.Laravel = {
-            "baseUrl": 'https://infixlms.ischooll.com' + '/',
+            "baseUrl": 'https://' + '/',
             "current_path_without_domain": 'home4',
             "csrfToken": 'RwEpAzz8A5YR13AMFXenAxmKZNPuXBc2FCOJrGoQ',
         }
